--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up && npm run wait-for-postgres && npm run migration:up && next dev",
+    "dev": "npm run services:up && npm run services:wait:database && npm run migration:up && next dev",
     "services:up": "docker compose -f infra/compose.yml up -d",
     "services:down": "docker compose -f infra/compose.yml down",
     "services:stop": "docker compose -f infra/compose.yml stop",
+    "services:wait:database": "node infra/scripts/wait-for-postgres.js",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
@@ -15,7 +16,6 @@
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create first migration",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
     "prepare": "husky",
     "commit": "cz"
   },
@@ -28,7 +28,7 @@
     "next": "15.2.1",
     "node-pg-migrate": "7.9.1",
     "pg": "8.13.3",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
