--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "services:down": "docker compose -f infra/compose.yml down",
     "services:stop": "docker compose -f infra/compose.yml stop",
     "services:wait:database": "node infra/scripts/wait-for-postgres.js",
+    "migrations:create": "node-pg-migrate -m infra/migrations create first migration",
+    "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
     "test": "npm run services:up && concurrently --names next,jest --hide next --kill-others --success command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
-    "migration:create": "node-pg-migrate -m infra/migrations create first migration",
-    "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "prepare": "husky",
     "commit": "cz"
   },
