--- a/package.json
+++ b/package.json
@@ -24,27 +24,29 @@
   "license": "MIT",
   "dependencies": {
     "async-retry": "1.3.3",
-    "dotenv": "16.4.7",
-    "dotenv-expand": "12.0.1",
-    "next": "15.2.1",
-    "node-pg-migrate": "7.9.1",
-    "pg": "8.13.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "dotenv": "16.4.5",
+    "dotenv-expand": "11.0.6",
+    "next": "14.2.5",
+    "next-connect": "1.0.0",
+    "node-pg-migrate": "7.6.1",
+    "pg": "8.12.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "swr": "2.2.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.8.0",
-    "@commitlint/config-conventional": "19.8.0",
-    "commitizen": "4.3.1",
-    "concurrently": "9.1.2",
+    "@commitlint/cli": "19.4.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "commitizen": "4.3.0",
+    "concurrently": "8.2.2",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.2.1",
-    "eslint-config-prettier": "10.1.1",
-    "eslint-plugin-jest": "28.11.0",
-    "husky": "9.1.7",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "28.8.0",
+    "husky": "9.1.4",
     "jest": "29.7.0",
-    "prettier": "3.5.3"
+    "prettier": "3.3.3"
   },
   "config": {
     "commitizen": {
